--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ APP_KEY=base64:uZcMXcs3VOtU+0Pp7ttyJlvgF332Joo6Ef//O0aS6NM=
 APP_DEBUG=true
 APP_URL=http://localhost
 
-API_EXTERNE_HOST=http://localhost:8100/
+API_EXTERNE_HOST=https://admin.plaafricalaw.com/
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
